Build with different name and ID in debug mode
Signed-off-by: Eric Kuck <eric@bluelinelabs.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ android {
         release {
             if (keystorePropertiesFile.exists()) signingConfig signingConfigs.release
         }
+        debug {
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+        }
     }
     externalNativeBuild {
         cmake {
