tools: pass in debug package name
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,20 @@ android {
     buildTypes {
         release {
             if (keystorePropertiesFile.exists()) signingConfig signingConfigs.release
+            externalNativeBuild {
+                cmake {
+                    arguments "-DANDROID_PACKAGE_NAME=${android.defaultConfig.applicationId}"
+                }
+            }
         }
         debug {
             applicationIdSuffix ".debug"
             versionNameSuffix "-debug"
+            externalNativeBuild {
+                cmake {
+                    arguments "-DANDROID_PACKAGE_NAME=${android.defaultConfig.applicationId}${applicationIdSuffix}"
+                }
+            }
         }
     }
     externalNativeBuild {
