tools: let wg(8) play with userspace implementation

--- a/app/tools/CMakeLists.txt
+++ b/app/tools/CMakeLists.txt
@@ -21,6 +21,7 @@ add_custom_target(libwg-go.so WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/lib
     ANDROID_TOOLCHAIN_ROOT=${ANDROID_TOOLCHAIN_ROOT}
     ANDROID_LLVM_TRIPLE=${ANDROID_LLVM_TRIPLE}
     ANDROID_SYSROOT=${ANDROID_SYSROOT}
+    ANDROID_PACKAGE_NAME=${ANDROID_PACKAGE_NAME}
     CFLAGS=${CMAKE_C_FLAGS}\ -Wno-unused-command-line-argument
     LDFLAGS=${CMAKE_SHARED_LINKER_FLAGS}\ -fuse-ld=gold
     DESTDIR=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
