--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ ext {
     streamsupportVersion = '1.6.0'
     jsr305Version = '3.0.2'
     zxingEmbeddedVersion = '3.6.0'
+    acraVersion = '5.2.0-rc2'
 }
 
 dependencies {
@@ -82,6 +83,8 @@ dependencies {
     implementation "net.sourceforge.streamsupport:android-retrostreams:$streamsupportVersion"
     implementation "com.google.code.findbugs:jsr305:$jsr305Version"
     implementation "com.journeyapps:zxing-android-embedded:$zxingEmbeddedVersion"
+    implementation "ch.acra:acra-http:$acraVersion"
+
 }
 
 tasks.withType(JavaCompile) {
