--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,12 +65,13 @@ android {
 }
 
 ext {
-    databindingVersion = '3.1.3'
-    supportLibsVersion = '27.1.1'
-    streamsupportVersion = '1.6.0'
-    jsr305Version = '3.0.2'
-    zxingEmbeddedVersion = '3.6.0'
     acraVersion = '5.2.0-rc2'
+    databindingVersion = '3.1.3'
+    jsr305Version = '3.0.2'
+    streamsupportVersion = '1.6.0'
+    supportLibsVersion = '28.0.0'
+    threetenabpVersion = '1.1.1'
+    zxingEmbeddedVersion = '3.6.0'
 }
 
 dependencies {
@@ -81,6 +82,7 @@ dependencies {
     implementation "com.android.support:preference-v14:$supportLibsVersion"
     implementation "com.android.support:support-annotations:$supportLibsVersion"
     implementation "com.google.code.findbugs:jsr305:$jsr305Version"
+    implementation "com.jakewharton.threetenabp:threetenabp:$threetenabpVersion"
     implementation "com.journeyapps:zxing-android-embedded:$zxingEmbeddedVersion"
     implementation "net.sourceforge.streamsupport:android-retrofuture:$streamsupportVersion"
     implementation "net.sourceforge.streamsupport:android-retrostreams:$streamsupportVersion"
