--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,21 +65,25 @@ android {
 }
 
 ext {
+    annotationsVersion = '1.0.1'
+    appcompatVersion = '1.0.2'
+    cardviewVersion = '1.0.0'
     databindingVersion = '3.1.3'
+    materialComponentsVersion = '1.0.0'
     jsr305Version = '3.0.2'
+    preferenceVersion = '1.0.0'
     streamsupportVersion = '1.6.0'
-    supportLibsVersion = '27.1.1'
     threetenabpVersion = '1.1.1'
     zxingEmbeddedVersion = '3.6.0'
 }
 
 dependencies {
-    implementation "com.android.databinding:library:$databindingVersion"
-    implementation "com.android.support:appcompat-v7:$supportLibsVersion"
-    implementation "com.android.support:cardview-v7:$supportLibsVersion"
-    implementation "com.android.support:design:$supportLibsVersion"
-    implementation "com.android.support:preference-v14:$supportLibsVersion"
-    implementation "com.android.support:support-annotations:$supportLibsVersion"
+    implementation "androidx.annotation:annotation:$annotationsVersion"
+    implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    implementation "androidx.cardview:cardview:$cardviewVersion"
+    implementation "androidx.databinding:databinding-runtime:$databindingVersion"
+    implementation "androidx.preference:preference:$preferenceVersion"
+    implementation "com.google.android.material:material:$materialComponentsVersion"
     implementation "com.google.code.findbugs:jsr305:$jsr305Version"
     implementation "com.jakewharton.threetenabp:threetenabp:$threetenabpVersion"
     implementation "com.journeyapps:zxing-android-embedded:$zxingEmbeddedVersion"
