--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,7 @@
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/settings"
-            android:parentActivityName=".activity.MainActivity"
-            android:theme="@style/SettingsTheme" />
+            android:parentActivityName=".activity.MainActivity" />
 
         <activity
             android:name=".activity.TunnelCreatorActivity"
