Enable proguard and wire up rules
Signed-off-by: Harsh Shandilya <msfjarvis@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ android {
                     arguments "-DANDROID_PACKAGE_NAME=${android.defaultConfig.applicationId}"
                 }
             }
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
         debug {
             applicationIdSuffix ".debug"
