--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,10 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+tasks {
+    wrapper {
+        gradleVersion = "5.6.2"
+        distributionType = Wrapper.DistributionType.ALL
+    }
+}
