--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ ext {
     appcompatVersion = '1.0.2'
     cardviewVersion = '1.0.0'
     databindingVersion = '3.3.1'
+    leakCanaryVersion = "2.0-beta-3"
     materialComponentsVersion = '1.0.0'
     jsr305Version = '3.0.2'
     preferenceVersion = '1.0.0'
@@ -91,6 +92,7 @@ dependencies {
     implementation "com.journeyapps:zxing-android-embedded:$zxingEmbeddedVersion"
     implementation "net.sourceforge.streamsupport:android-retrofuture:$streamsupportVersion"
     implementation "net.sourceforge.streamsupport:android-retrostreams:$streamsupportVersion"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
 }
 
 tasks.withType(JavaCompile) {
