--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ allprojects {
 buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
     }
     repositories {
         google()
