Relocate com.wireguard.config to a separate subproject
Enables isolated testing and re-use by other projects that would require robust
WireGuard config handling in a JVM environment.

Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ ext {
 }
 
 dependencies {
+    implementation project(":config")
     implementation "androidx.annotation:annotation:$annotationsVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.cardview:cardview:$cardviewVersion"
