--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,23 @@ allprojects {
 }
 
 buildscript {
+    ext {
+        annotationsVersion = '1.1.0'
+        appcompatVersion = '1.1.0'
+        cardviewVersion = '1.0.0'
+        coordinatorLayoutVersion = '1.1.3'
+        databindingVersion = '3.5.3'
+        materialComponentsVersion = '1.1.0'
+        jsr305Version = '3.0.2'
+        preferenceVersion = '1.1.0'
+        streamsupportVersion = '1.7.1'
+        threetenabpVersion = '1.2.2'
+        // ZXING switched minSdk to 24 so we cannot upgrade to 4.0.2 without following suit.
+        // If you choose to upgrade to minSDK 24 then you should also disable Jetifier from
+        // gradle.properties.
+        zxingEmbeddedVersion = '3.6.0'
+        eddsaVersion = '0.3.0'
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
