Apply nonnull generation to all subprojects
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ buildscript {
     }
 }
 
+subprojects {
+    apply from: rootProject.file('nonnull.gradle')
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
