app: Remove errant use of javax Nullable
This also lets us restrict the scope of the find-bugs dependency to the config module.

Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/config/build.gradle
+++ b/config/build.gradle
@@ -21,8 +21,8 @@ android {
 }
 
 dependencies {
-    api "com.google.code.findbugs:jsr305:$jsr305Version"
     api "net.sourceforge.streamsupport:android-retrofuture:$streamsupportVersion"
     api "net.sourceforge.streamsupport:android-retrostreams:$streamsupportVersion"
+    implementation "com.google.code.findbugs:jsr305:$jsr305Version"
     implementation "com.jakewharton.threetenabp:threetenabp:$threetenabpVersion"
 }
