--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,10 @@ buildscript {
         appcompatVersion = '1.1.0'
         cardviewVersion = '1.0.0'
         coordinatorLayoutVersion = '1.1.3'
-        databindingVersion = '3.5.3'
+        agpVersion = '3.5.3'
         materialComponentsVersion = '1.1.0'
         jsr305Version = '3.0.2'
+        kotlinVersion = '1.3.61'
         preferenceVersion = '1.1.0'
         streamsupportVersion = '1.7.1'
         threetenabpVersion = '1.2.2'
@@ -24,8 +25,8 @@ buildscript {
         eddsaVersion = '0.3.0'
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
+        classpath "com.android.tools.build:gradle:$agpVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
     repositories {
         google()
