Move tools to tunnel module
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -11,7 +11,7 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path project(':app').projectDir.path + '/tools/CMakeLists.txt'
+            path 'tools/CMakeLists.txt'
         }
     }
 }
