--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            jvmTarget = '1.8'
+        }
+    }
     compileSdkVersion 29
     dataBinding.enabled true
     defaultConfig {
