--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ ext {
     annotationsVersion = '1.1.0'
     appcompatVersion = '1.1.0'
     cardviewVersion = '1.0.0'
+    coreKtxVersion = '1.2.0'
     coordinatorLayoutVersion = '1.1.3'
     databindingVersion = '3.6.0'
     materialComponentsVersion = '1.1.0'
@@ -95,6 +96,7 @@ dependencies {
     implementation "androidx.annotation:annotation:$annotationsVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.cardview:cardview:$cardviewVersion"
+    implementation "androidx.core:core-ktx:$coreKtxVersion"
     implementation "androidx.databinding:databinding-runtime:$databindingVersion"
     implementation "androidx.preference:preference:$preferenceVersion"
     implementation "com.google.android.material:material:$materialComponentsVersion"
