ModuleLoader: move to right project
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation "androidx.collection:collection:$collectionVersion"
     implementation "com.google.code.findbugs:jsr305:$jsr305Version"
     implementation "com.jakewharton.threetenabp:threetenabp:$threetenabpVersion"
+    implementation "net.i2p.crypto:eddsa:$eddsaVersion"
 }
