--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -53,7 +53,7 @@ android {
                 }
             }
             minifyEnabled true
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
         debug {
             applicationIdSuffix ".debug"
