--- a/tunnel/build.gradle
+++ b/tunnel/build.gradle
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName '1.0'
+        versionCode wireguardVersionCode
+        versionName wireguardVersionName
     }
     externalNativeBuild {
         cmake {
