--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -22,8 +22,8 @@ android {
         applicationId 'com.wireguard.android'
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 465
-        versionName '0.0.20200309'
+        versionCode wireguardVersionCode
+        versionName wireguardVersionName
         buildConfigField 'int', 'MIN_SDK_VERSION', "$minSdkVersion.apiLevel"
     }
     // If the keystore file exists
