tunnel: upload aar to bintray

--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,14 @@ buildscript {
         // gradle.properties.
         zxingEmbeddedVersion = '3.6.0'
         eddsaVersion = '0.3.0'
+        bintrayPluginVersion = '1.8.4'
+        mavenPluginVersion = '2.1'
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$agpVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:$mavenPluginVersion"
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintrayPluginVersion"
     }
     repositories {
         google()
