--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
+version wireguardVersionName
+group groupName
+
 // Create a variable called keystorePropertiesFile, and initialize it to your
 // keystore.properties file, in the rootProject folder.
 final def keystorePropertiesFile = rootProject.file("keystore.properties")
