tunnel: Add an initial set of unit tests
Includes a control set of broken configuration files that we attempt to parse and
verify that the parser fails in a predictable and consistent manner.

Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ buildscript {
         eddsaVersion = '0.3.0'
         bintrayPluginVersion = '1.8.4'
         mavenPluginVersion = '2.1'
+        junitVersion = '4.13'
 
         groupName = 'com.wireguard.android'
     }
