--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,11 @@ buildscript {
         cardviewVersion = '1.0.0'
         collectionVersion = '1.1.0'
         coreKtxVersion = '1.2.0'
+        coroutinesVersion = '1.3.5'
         constraintLayoutVersion = '1.1.3'
         coordinatorLayoutVersion = '1.1.0'
         agpVersion = '3.6.1'
-        fragmentVersion = '1.2.2'
+        fragmentVersion = '1.2.3'
         materialComponentsVersion = '1.1.0'
         jsr305Version = '3.0.2'
         kotlinVersion = '1.3.71'
