--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -22,6 +22,7 @@ android {
     }
     compileSdkVersion 29
     dataBinding.enabled true
+    viewBinding.enabled true
     defaultConfig {
         applicationId 'com.wireguard.android'
         minSdkVersion 21
@@ -84,6 +85,8 @@ dependencies {
     implementation "com.google.android.material:material:$materialComponentsVersion"
     implementation "com.journeyapps:zxing-android-embedded:$zxingEmbeddedVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
     implementation "net.sourceforge.streamsupport:android-retrofuture:$streamsupportVersion"
     implementation "net.sourceforge.streamsupport:android-retrostreams:$streamsupportVersion"
 }
